--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@electron/rebuild": "^4.0.2",
     "electron": "^39.2.7"
   },
   "dependencies": {
-    "@tkomde/iohook": "^1.1.7"
+    "@tkomde/iohook": "^1.1.7",
+    "robotjs": "^0.6.0"
   }
 }
