--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "electron-builder": "^26.0.12"
   },
   "dependencies": {
-    "@tkomde/iohook": "^1.1.7",
-    "robotjs": "^0.6.0"
+    "@tkomde/iohook": "^1.1.7"
   },
   "build": {
     "appId": "com.user.mousecarousel",
