--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-# Dependency directory
 node_modules/
-
-# Build outputs
-dist/
 build/
-
-# Logs and OS files
-npm-debug.log*
+*.log
 .DS_Store
 Thumbs.db
+*.zip
+*.7z
