--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
-  "name": "mouse-carousel",
-  "version": "1.0.0",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron .",
-    "rebuild": "electron-rebuild -f -w robotjs",
-    "dist": "npm run rebuild && electron-builder"
-  },
-  "keywords": [],
+  "name": "mouse-carousel-v2",
+  "version": "2.0.0",
+  "main": "src/main.js",
+  "description": "Improved Mouse Carousel - Radial action menu",
   "author": "",
   "license": "ISC",
-  "description": "Mouse Carousel for G502 X",
+  "scripts": {
+    "start": "electron .",
+    "dev": "electron . --dev",
+    "build": "electron-builder",
+    "rebuild": "electron-rebuild -f -w robotjs"
+  },
   "devDependencies": {
     "@electron/rebuild": "^4.0.2",
-    "electron": "^39.2.7",
-    "electron-builder": "^26.0.12"
+    "electron": "^33.2.0",
+    "electron-builder": "^25.1.8"
   },
   "dependencies": {
-    "@tkomde/iohook": "^1.1.7",
     "robotjs": "^0.6.0"
   },
   "build": {
-    "appId": "com.user.mousecarousel",
+    "appId": "com.mousecarousel.app",
     "productName": "MouseCarousel",
     "win": {
-      "target": "portable",
-      "requestedExecutionLevel": "asInvoker"
+      "target": ["portable", "nsis"],
+      "requestedExecutionLevel": "asInvoker",
+      "icon": "assets/icon.ico"
     },
     "directories": {
-      "output": "dist"
+      "output": "dist",
+      "buildResources": "assets"
     },
+    "files": [
+      "src/**/*",
+      "assets/**/*",
+      "config.json"
+    ],
     "asar": true
   }
 }
